# GPU-Local-Subgraph-Counting

./: CMakeLists.txt  README.md
config/: config.h
counting/: equation.cpp  execution.cpp
executable/: CMakeLists.txt  command.cpp  command.h  scope.cpp  scope.cu
exp/pattern_graph/7voc/: 20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  40.txt  41.txt  42.txt  43.txt  44.txt  45.txt  46.txt  47.txt  48.txt  49.txt
gpu/: CMakeLists.txt  counting_kernels.cu  counting_kernels.h  cuda_helpers.h  execution_gpu.cu  execution_gpu.h  globals.cu  globals.h  gpu_config.h  lock_based_composite_hashtable.cu  lock_based_composite_hashtable.h  lock_free_hashtable.cu  lock_free_hashtable.h  memory_manager.cu  memory_manager.h  nodeGPU.h  subgraph_matching.cu  subgraph_matching.h  wrapper_variables.cu  wrapper_variables.h
graph/: graph.h
include/warpcore/: base.cuh  counting_hash_table.cuh  defaults.cuh  single_value_hash_table.cuh  storage.cuh
plan/: tree.h
utility/: clique.cpp  clique.h  compute_set_intersection.cpp  compute_set_intersection.h
